--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Hombres buenos</em></strong> de Arturo Pérez Reverte</li>
+        <li>🥸 <em><strong>El río que nos lleva</em></strong> de José Luis Sampedro</li>
+        <li>🥸 <em><strong>One piece: #5 (Vol. 13–15)</em></strong> de Eiichirō Oda</li>
+        <li>✅ <em><strong>Hombres buenos</em></strong> de Arturo Pérez Reverte</li>
         <li>✅ <em><strong>Zelda: El camino a BOTW y TOTK</em></strong> de F. J. Brenlla Duarte</li>
         <li>✅ <em><strong>Zelda: La saga más innovadora</em></strong> de F. J. Brenlla Duarte</li>
         <li>♻️ <em><strong>Las aventuras del joven Indiana Jones: La maldición de la momia</em></strong> de M. Stine y H. W. Stine</li>
@@ -332,13 +334,13 @@
         <li>♻️ <em><strong>Astérix el Galo</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>✅ <em><strong>Todos a la cama</em></strong> de Álvaro Bilbao</li>
         <li>✅ <em><strong>El cerebro del niño explicado a los padres</em></strong> de Álvaro Bilbao</li>
-        <li>✅ <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
+        <li>✅ <em><strong>.ss01</em></strong> by VV. AA. (Type Design Magazine)</li>
         <li>♻️ <em><strong>Tintín y los pícaros</em></strong> de Hergé</li>
         <li>♻️ <em><strong>Tintín y el lago de los tiburones</em></strong> de Hergé</li>
         <li>♻️ <em><strong>Vuelo 714 para Sidney</em></strong> de Hergé</li>
         <li>♻️ <em><strong>Las joyas de la Castafiore</em></strong> de Hergé</li>
         <li>✅ <em><strong>Necesidad del libro</em></strong> de Ángel María de Lera</li>
-        <li>✅ <em><strong>Libros para no perderse</em></strong> de VV.AA. (elDiario.es)</li>
+        <li>✅ <em><strong>Libros para no perderse</em></strong> de VV. AA. (elDiario.es)</li>
         <li>❤️ <em><strong>El labrador de más aire</em></strong> de Miguel Hernández</li>
         <li>🔥 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
         <li>❤️ <em><strong>One piece: #4 (Vol. 10–12)</em></strong> de Eiichirō Oda</li>
@@ -416,7 +418,7 @@
       </ul>
       <br>2022:
       <ul>
-        <li>❤️ <em><strong>Escribir novela</em></strong> de VV.AA. (Escuela de escritores)</li>
+        <li>❤️ <em><strong>Escribir novela</em></strong> de VV. AA. (Escuela de escritores)</li>
         <li>🔥 <em><strong>El libro de Gloria para niñas y niños</em></strong> de Gloria Fuertes</li>
         <li>⏹️ <em><strong>Lecciones de la Historia</em></strong> de Will y Ariel Durant</li>
         <li>✅ <em><strong>Humble Pie, my autobiography</em></strong> by Gordon Ramsay</li>
@@ -435,7 +437,7 @@
         <li>🔥 <em><strong>Alguien habló de nosotros</em></strong> de Irene Vallejo</li>
         <li>❤️ <em><strong>Por si las voces vuelven</em></strong> de Ángel Martín</li>
         <li>✅ <em><strong>El desorden de los libros</em></strong> de Massimo Gatta</li>
-        <li>✅ <em><strong>Especial NBA 75 aniversario Gigantes</em></strong> de VV.AA.</li>
+        <li>✅ <em><strong>Especial NBA 75 aniversario Gigantes</em></strong> de VV. AA.</li>
         <li>✅ <em><strong>Libros y libreros en la antigüedad</em></strong> de Alfonso Reyes</li>
         <li>✅ <em><strong>El resplandor</em></strong> de Stephen King</li>
         <li>✅ <em><strong>Sombra y Hueso</em></strong> de Leigh Bardugo</li>
@@ -461,12 +463,12 @@
         <li>✅ <em><strong>#chandaleras: masculinidad femenina vs. feminidad obligatoria en el deporte</em></strong> de Ana Pastor Pascual</li>
         <li>♻️ <em><strong>Los asquerosos</em></strong> de Santiago Lorenzo</li>
         <li>✅ <em><strong>La España de las piscinas</em></strong> de Jorge Dioni López</li>
-        <li>❤️ <em><strong>¡Protesto! Videojuegos desde una perspectiva de género</em></strong> de VV.AA. (Anait)</li>
+        <li>❤️ <em><strong>¡Protesto! Videojuegos desde una perspectiva de género</em></strong> de VV. AA. (Anait)</li>
         <li>❤️ <em><strong>Contra la lectura</em></strong> de Mikita Brottman</li>
         <li>❤️ <em><strong>¡Milagro! Éxtasis y sombras en El Palmar de Troya</em></strong> de Jorge Decarlini</li>
         <li>✅ <em><strong>Olivetti, a unidade na diversidade</em></strong> de María Ramos</li>
         <li>✅ <em><strong>El enigma de la habitación 622</em></strong> de Joël Dicker</li>
-        <li>✅ <em><strong>El libro de las Aventuras Gráficas</em></strong> de VV.AA.</li>
+        <li>✅ <em><strong>El libro de las Aventuras Gráficas</em></strong> de VV. AA.</li>
         <li>✅ <em><strong>Rey Blanco</em></strong> de Juan Gómez-Jurado</li>
         <li>🔥 <em><strong>Lo esencial: el diseño y otras cosas de la vida</em></strong> de Miguel Milá</li>
         <li>❤️ <em><strong>Cómo escribo novela policiaca</em></strong> de Andreu Martín</li>
@@ -492,7 +494,7 @@
         <li>❤️ <em><strong>Morder la manzana</em></strong> de Leticia Dolera</li>
         <li>✅ <em><strong>La mala leche</em></strong> de Henar Álvarez y Ana Müshell</li>
         <li>🔥 <em><strong>El infinito en un junco</em></strong> de Irene Vallejo</li>
-        <li>✅ <em><strong>El ABC de la tipografía</em></strong> de David Rault y VV.AA.</li>
+        <li>✅ <em><strong>El ABC de la tipografía</em></strong> de David Rault y VV. AA.</li>
         <li>⏹️ <em><strong>El fin de la eternidad</em></strong> de Isaac Asimov</li>
         <li>✅ <em><strong>Filosofía de la cultura</em></strong> de Jesús Mosterín</li>
         <li>✅ <em><strong>Misery</em></strong> de Stephen King</li>
