--- a/index.html
+++ b/index.html
@@ -308,7 +308,8 @@
       2024:
       <ul>
         <li>🥸 <em><strong>El río que nos lleva</em></strong> de José Luis Sampedro</li>
-        <li>🥸 <em><strong>One piece: #5 (Vol. 13–15)</em></strong> de Eiichirō Oda</li>
+        <li>🥸 <em><strong>Lo que pasa es que te quiero</em></strong> de Gloria Fuertes</li>
+        <li>✅ <em><strong>One piece: #5 (Vol. 13–15)</em></strong> de Eiichirō Oda</li>
         <li>✅ <em><strong>Hombres buenos</em></strong> de Arturo Pérez Reverte</li>
         <li>✅ <em><strong>Zelda: El camino a BOTW y TOTK</em></strong> de F. J. Brenlla Duarte</li>
         <li>✅ <em><strong>Zelda: La saga más innovadora</em></strong> de F. J. Brenlla Duarte</li>
