--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       2024:
       <ul>
         <li>🥸 <em><strong>El río que nos lleva</em></strong> de José Luis Sampedro</li>
-        <li>🥸 <em><strong>Lo que pasa es que te quiero</em></strong> de Gloria Fuertes</li>
+        <li>✅ <em><strong>Lo que pasa es que te quiero</em></strong> de Gloria Fuertes</li>
         <li>✅ <em><strong>One piece: #5 (Vol. 13–15)</em></strong> de Eiichirō Oda</li>
         <li>✅ <em><strong>Hombres buenos</em></strong> de Arturo Pérez Reverte</li>
         <li>✅ <em><strong>Zelda: El camino a BOTW y TOTK</em></strong> de F. J. Brenlla Duarte</li>
@@ -598,7 +598,7 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Elden Ring: Shadow of the Erdtree</em></strong> on Playstation 5, 4 hours</li>
+        <li>🎮 <em><strong>Elden Ring: Shadow of the Erdtree</em></strong> on Playstation 5, 20 hours</li>
         <li>⏹️ <em><strong>SteamWorld Dig</em></strong> on Nintendo Switch, 2 hours</li>
         <li>♻️ <em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
         <li>✅ <em><strong>Balatro</em></strong> on Nintendo Switch, 15 hours</li>
