--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>El río que nos lleva</em></strong> de José Luis Sampedro</li>
+        <li>🥸 <em><strong>En la boca del lobo</em></strong> de Elvira Lindo</li>
+        <li>♻️ <em><strong>On Writing</em></strong> by Stephen King</li>
+        <li>⏹️ <em><strong>El río que nos lleva</em></strong> de José Luis Sampedro</li>
         <li>✅ <em><strong>Lo que pasa es que te quiero</em></strong> de Gloria Fuertes</li>
         <li>✅ <em><strong>One piece: #5 (Vol. 13–15)</em></strong> de Eiichirō Oda</li>
         <li>✅ <em><strong>Hombres buenos</em></strong> de Arturo Pérez Reverte</li>
