--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
       </p>
       2024:
       <ul>
+        <li>🥸 <em><strong>Cómo escribo novela policiaca</em></strong> de Andreu Martín</li>
         <li>🥸 <em><strong>En la boca del lobo</em></strong> de Elvira Lindo</li>
         <li>♻️ <em><strong>On Writing</em></strong> by Stephen King</li>
         <li>⏹️ <em><strong>El río que nos lleva</em></strong> de José Luis Sampedro</li>
