--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>El simple arte de matar</em></strong> deRaymond Chandler</li>
+        <li>🥸 <em><strong>Departamento de Homicidios</em></strong> de Cruz Morcillo</li>
+        <li>✅ <em><strong>El simple arte de matar</em></strong> de Raymond Chandler</li>
         <li>♻️ <em><strong>Cómo escribo novela policiaca</em></strong> de Andreu Martín</li>
         <li>⏹️ <em><strong>En la boca del lobo</em></strong> de Elvira Lindo</li>
         <li>♻️ <em><strong>On Writing</em></strong> by Stephen King</li>
