--- a/index.html
+++ b/index.html
@@ -307,11 +307,13 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Departamento de Homicidios</em></strong> de Cruz Morcillo</li>
+        <li>♻️ <em><strong>Tatuaje</em></strong> de Manuel Vázquez Montalbán</li>
+        <li>♻️ <em><strong>El guardián invisible</em></strong> de Dolores Redondo</li>
+        <li>❤️ <em><strong>Departamento de Homicidios</em></strong> de Cruz Morcillo</li>
         <li>✅ <em><strong>El simple arte de matar</em></strong> de Raymond Chandler</li>
         <li>♻️ <em><strong>Cómo escribo novela policiaca</em></strong> de Andreu Martín</li>
-        <li>⏹️ <em><strong>En la boca del lobo</em></strong> de Elvira Lindo</li>
         <li>♻️ <em><strong>On Writing</em></strong> by Stephen King</li>
+        <li>⏹️ <em><strong>En la boca del lobo</em></strong> de Elvira Lindo</li>
         <li>⏹️ <em><strong>El río que nos lleva</em></strong> de José Luis Sampedro</li>
         <li>✅ <em><strong>Lo que pasa es que te quiero</em></strong> de Gloria Fuertes</li>
         <li>✅ <em><strong>One piece: #5 (Vol. 13–15)</em></strong> de Eiichirō Oda</li>
