--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
       </p>
       2024:
       <ul>
-        <li>♻️ <em><strong>Tatuaje</em></strong> de Manuel Vázquez Montalbán</li>
+        <li>♻️ <em><strong>Ofrenda a la tormenta</em></strong> de Dolores Redondo</li>
+        <li>♻️ <em><strong>Legado en los huesos</em></strong> de Dolores Redondo</li>
         <li>♻️ <em><strong>El guardián invisible</em></strong> de Dolores Redondo</li>
         <li>❤️ <em><strong>Departamento de Homicidios</em></strong> de Cruz Morcillo</li>
         <li>✅ <em><strong>El simple arte de matar</em></strong> de Raymond Chandler</li>
@@ -856,8 +857,10 @@
     <div class="col2c" id="awards">
       <p><strong>Awards</strong></p>
       <ul>
-        <li><strong>D&AD 2024</strong>, Shortlisted for <em>Android Brand Refresh</em>.</li>
-        <li><strong>The One Show Pencil 2024</strong>, Bronze for <em>Android Brand Refresh</em>.</li>
+        <li><strong>Brand Impact Awards 2024</strong>, Bronze for <em>Enterprise Mobility</em>.</li>
+        <li><strong>Brand Impact Awards 2024</strong>, Silver for <em>Android</em>.</li>
+        <li><strong>D&AD 2024</strong>, Shortlisted for <em>Android/em>.</li>
+        <li><strong>The One Show Pencil 2024</strong>, Bronze for <em>Android</em>.</li>
         <li><strong>Premio Gràffica 2023</strong>.</li>
         <li><strong>Red Dot Awards 2022</strong>, Best of the Best for <em>RTL United</em>.</li>
         <li><strong>iF Design Awards 2022</strong>, Winner for <em>RTL United</em>.</li>
