--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
       <ul>
         <li><strong>Brand Impact Awards 2024</strong>, Bronze for <em>Enterprise Mobility</em>.</li>
         <li><strong>Brand Impact Awards 2024</strong>, Silver for <em>Android</em>.</li>
-        <li><strong>D&AD 2024</strong>, Shortlisted for <em>Android/em>.</li>
+        <li><strong>D&AD 2024</strong>, Shortlisted for <em>Android</em>.</li>
         <li><strong>The One Show Pencil 2024</strong>, Bronze for <em>Android</em>.</li>
         <li><strong>Premio Gràffica 2023</strong>.</li>
         <li><strong>Red Dot Awards 2022</strong>, Best of the Best for <em>RTL United</em>.</li>
