--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
       </p>
       2024:
       <ul>
+        <li>✅ <em><strong>Guía NBA 2024-25 Gigantes</em></strong> de K. García, A. Gaitán y S. Rabinal</li>
         <li>♻️ <em><strong>Ofrenda a la tormenta</em></strong> de Dolores Redondo</li>
         <li>♻️ <em><strong>Legado en los huesos</em></strong> de Dolores Redondo</li>
         <li>♻️ <em><strong>El guardián invisible</em></strong> de Dolores Redondo</li>
