--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@
       </p>
       2024:
       <ul>
+        <li>🥸 <em><strong>Todo muere</em></strong> de Juan Gómez-Jurado</li>
+        <li>♻️ <em><strong>Tatuaje</em></strong> de Manuel Vázquez Montalbán</li>
         <li>✅ <em><strong>Guía NBA 2024-25 Gigantes</em></strong> de A. Gaitán, K. García y S. Rabinal</li>
         <li>♻️ <em><strong>Ofrenda a la tormenta</em></strong> de Dolores Redondo</li>
         <li>♻️ <em><strong>Legado en los huesos</em></strong> de Dolores Redondo</li>
