--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Elden Ring: Shadow of the Erdtree</em></strong> on Playstation 5, 20 hours</li>
+        <li>⏹️ <em><strong>Elden Ring: Shadow of the Erdtree</em></strong> on Playstation 5, 20 hours</li>
         <li>⏹️ <em><strong>SteamWorld Dig</em></strong> on Nintendo Switch, 2 hours</li>
         <li>♻️ <em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
         <li>✅ <em><strong>Balatro</em></strong> on Nintendo Switch, 15 hours</li>
