--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
     <h2>Fonts</h2>
     <ul id="fonts">
       <li>
+        <div class="col1"><strong>Font: At Umami</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2024<br>Link: <a href="https://arillatype.studio/font/at-umami">Font details</a></div>
+        <div class="col2"><a href="https://arillatype.studio/font/at-umami"><img src="assets/AtUmami.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>UEFA Conference League</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2024<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/UEFACONFERENCE.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>UEFA Europa League</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2024<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/UEFAEUROPA.svg"></div>
+      </li>
+      <li>
         <div class="col1"><strong>Font: At Textual</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2024<br>Link: <a href="https://arillatype.studio/font/at-textual">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-textual"><img src="assets/AtTextual.svg"></a></div>
       </li>
