--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Todo muere</em></strong> de Juan Gómez-Jurado</li>
+        <li>🥸 <em><strong>El clan del oso cavernario</em></strong> de Jean M. Auel</li>
         <li>♻️ <em><strong>Tatuaje</em></strong> de Manuel Vázquez Montalbán</li>
         <li>✅ <em><strong>Guía NBA 2024-25 Gigantes</em></strong> de A. Gaitán, K. García y S. Rabinal</li>
         <li>♻️ <em><strong>Ofrenda a la tormenta</em></strong> de Dolores Redondo</li>
@@ -621,6 +622,8 @@
       </ul>
       2024:
       <ul>
+        <li>⏹️ <em><strong>Metal Slug XX</em></strong> on PSP (emulated), 1 hour</li>
+        <li>⏹️ <em><strong>Little Big Adventure (Remake)</em></strong> on Playstation 5, 1 hour</li>
         <li>⏹️ <em><strong>Elden Ring: Shadow of the Erdtree</em></strong> on Playstation 5, 20 hours</li>
         <li>⏹️ <em><strong>SteamWorld Dig</em></strong> on Nintendo Switch, 2 hours</li>
         <li>♻️ <em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
