--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <h2>Fonts</h2>
     <ul id="fonts">
       <li>
+        <div class="col1"><strong>Font: At Chrome</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2024<br>Link: <a href="https://arillatype.studio/font/at-chrome">Font details</a></div>
+        <div class="col2"><a href="https://arillatype.studio/font/at-chrome"><img src="assets/AtChrome.svg"></a></div>
+      </li>
+      <li>
         <div class="col1"><strong>Font: At Umami</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2024<br>Link: <a href="https://arillatype.studio/font/at-umami">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-umami"><img src="assets/AtUmami.svg"></a></div>
       </li>
