--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Todo muere</em></strong> de Juan Gómez-Jurado</li>
-        <li>🥸 <em><strong>El clan del oso cavernario</em></strong> de Jean M. Auel</li>
+        <li>🔥 <em><strong>El clan del oso cavernario</em></strong> de Jean M. Auel</li>
         <li>♻️ <em><strong>Tatuaje</em></strong> de Manuel Vázquez Montalbán</li>
         <li>✅ <em><strong>Guía NBA 2024-25 Gigantes</em></strong> de A. Gaitán, K. García y S. Rabinal</li>
         <li>♻️ <em><strong>Ofrenda a la tormenta</em></strong> de Dolores Redondo</li>
