--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Todo muere</em></strong> de Juan Gómez-Jurado</li>
+        <li>🥸 <em><strong>Puerto escondido</em></strong> de María Oruña</li>
+        <li>❤️ <em><strong>Todo muere</em></strong> de Juan Gómez-Jurado</li>
         <li>🔥 <em><strong>El clan del oso cavernario</em></strong> de Jean M. Auel</li>
         <li>♻️ <em><strong>Tatuaje</em></strong> de Manuel Vázquez Montalbán</li>
         <li>✅ <em><strong>Guía NBA 2024-25 Gigantes</em></strong> de A. Gaitán, K. García y S. Rabinal</li>
