--- a/index.html
+++ b/index.html
@@ -321,9 +321,14 @@
       <p>
         Notes: 🥸 Reading / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Re-read
       </p>
+      2025:
+      <ul>
+        <li>🥸 <em><strong>Suspense: Cómo se escribe una novela de intriga</em></strong> de Patricia Highsmith</li>
+      </ul>
       2024:
       <ul>
-        <li>🥸 <em><strong>Puerto escondido</em></strong> de María Oruña</li>
+        <li>✅ <em><strong>Esperando al diluvio</em></strong> de Dolores Redondo</li>
+        <li>✅ <em><strong>Puerto escondido</em></strong> de María Oruña</li>
         <li>❤️ <em><strong>Todo muere</em></strong> de Juan Gómez-Jurado</li>
         <li>🔥 <em><strong>El clan del oso cavernario</em></strong> de Jean M. Auel</li>
         <li>♻️ <em><strong>Tatuaje</em></strong> de Manuel Vázquez Montalbán</li>
