--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       </ul>
       <br>2024:
       <ul>
-        <li>✅ <em><strong>Esperando al diluvio</em></strong> de Dolores Redondo</li>
+        <li>❤️ <em><strong>Esperando al diluvio</em></strong> de Dolores Redondo</li>
         <li>✅ <em><strong>Puerto escondido</em></strong> de María Oruña</li>
         <li>❤️ <em><strong>Todo muere</em></strong> de Juan Gómez-Jurado</li>
         <li>🔥 <em><strong>El clan del oso cavernario</em></strong> de Jean M. Auel</li>
