--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
       </p>
       2025:
       <ul>
-        <li>🥸 <em><strong>Suspense: Cómo se escribe una novela de intriga</em></strong> de Patricia Highsmith</li>
+        <li>❤️ <em><strong>Las que no duermen NASH</em></strong> de Dolores Redondo</li>
+        <li>✅ <em><strong>Suspense: Cómo se escribe una novela de intriga</em></strong> de Patricia Highsmith</li>
       </ul>
       <br>2024:
       <ul>
