--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
       </p>
       2025:
       <ul>
+        <li>✅ <em><strong>Albertus: the biography of a typeface</em></strong> by Simon Garfield</li>
         <li>❤️ <em><strong>Las que no duermen NASH</em></strong> de Dolores Redondo</li>
         <li>✅ <em><strong>Suspense: Cómo se escribe una novela de intriga</em></strong> de Patricia Highsmith</li>
       </ul>
