--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
       </p>
       2025:
       <ul>
-        <li>🥸 <em><strong>Cuento de Hadas</em></strong> de Stephen King</li>
+        <li>🥸 <em><strong>Pepita Jiménez</em></strong> de Juan Valera</li>
+        <li>✅ <em><strong>Cuento de Hadas</em></strong> de Stephen King</li>
         <li>✅ <em><strong>La inteligencia de las flores</em></strong> de Maurice Maeterlinck</li>
         <li>✅ <em><strong>Albertus: the biography of a typeface</em></strong> by Simon Garfield</li>
         <li>❤️ <em><strong>Las que no duermen NASH</em></strong> de Dolores Redondo</li>
