--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
       </p>
       2025:
       <ul>
+        <li>🥸 <em><strong>Saga: Capítulo Uno</em></strong> de Brian K. Vaughan y Fional Staples</li>
         <li>🥸 <em><strong>Pepita Jiménez</em></strong> de Juan Valera</li>
         <li>✅ <em><strong>Cuento de Hadas</em></strong> de Stephen King</li>
         <li>✅ <em><strong>La inteligencia de las flores</em></strong> de Maurice Maeterlinck</li>
