--- a/index.html
+++ b/index.html
@@ -323,8 +323,10 @@
       </p>
       2025:
       <ul>
-        <li>🥸 <em><strong>Saga: Capítulo Uno</em></strong> de Brian K. Vaughan y Fional Staples</li>
         <li>🥸 <em><strong>Pepita Jiménez</em></strong> de Juan Valera</li>
+        <li>🥸 <em><strong>Saga: Capítulo Tres</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>♻️ <em><strong>Saga: Capítulo Dos</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>♻️ <em><strong>Saga: Capítulo Uno</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>✅ <em><strong>Cuento de Hadas</em></strong> de Stephen King</li>
         <li>✅ <em><strong>La inteligencia de las flores</em></strong> de Maurice Maeterlinck</li>
         <li>✅ <em><strong>Albertus: the biography of a typeface</em></strong> by Simon Garfield</li>
@@ -545,10 +547,10 @@
         <li>❤️ <em><strong>Sapiens</em></strong> de Yuval Noah Harari</li>
         <li>✅ <em><strong>Tipometría</em></strong> de Miguel Catopodis</li>
         <li>✅ <em><strong>Lluvia fina</em></strong> de Luis Landero</li>
-        <li>🔥 <em><strong>The Arab of the Future: Vol. 4 (1987–1992)</em></strong> by Riad Sattouf</li>
-        <li>❤️ <em><strong>Saga: Book Three</em></strong> by Brian K. Vaughan and Fiona Staples</li>
-        <li>❤️ <em><strong>Saga: Book Two</em></strong> by Brian K. Vaughan and Fiona Staples</li>
-        <li>❤️ <em><strong>Saga: Book One</em></strong> by Brian K. Vaughan and Fiona Staples</li>
+        <li>❤️ <em><strong>The Arab of the Future: Vol. 4 (1987–1992)</em></strong> by Riad Sattouf</li>
+        <li>🔥 <em><strong>Saga: Book Three</em></strong> by Brian K. Vaughan and Fiona Staples</li>
+        <li>🔥 <em><strong>Saga: Book Two</em></strong> by Brian K. Vaughan and Fiona Staples</li>
+        <li>🔥 <em><strong>Saga: Book One</em></strong> by Brian K. Vaughan and Fiona Staples</li>
         <li>✅ <em><strong>The shape of design</em></strong> by Frank Chimero</li>
         <li>♻️ <em><strong>Crónicas de la Guerra Civil</em></strong> de Miguel Hernández</li>
         <li>✅ <em><strong>Locke & Key: Alpha & Omega</em></strong> by Joe Hill and Gabriel Rodríguez</li>
