--- a/index.html
+++ b/index.html
@@ -323,10 +323,11 @@
       </p>
       2025:
       <ul>
-        <li>🥸 <em><strong>Pepita Jiménez</em></strong> de Juan Valera</li>
+        <li>🥸 <em><strong>El artesano</em></strong> de Richard Sennett</li>
         <li>🥸 <em><strong>Saga: Capítulo Tres</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Dos</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Uno</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>✅ <em><strong>Pepita Jiménez</em></strong> de Juan Valera</li>
         <li>✅ <em><strong>Cuento de Hadas</em></strong> de Stephen King</li>
         <li>✅ <em><strong>La inteligencia de las flores</em></strong> de Maurice Maeterlinck</li>
         <li>✅ <em><strong>Albertus: the biography of a typeface</em></strong> by Simon Garfield</li>
