--- a/index.html
+++ b/index.html
@@ -324,7 +324,10 @@
       2025:
       <ul>
         <li>🥸 <em><strong>El artesano</em></strong> de Richard Sennett</li>
-        <li>🥸 <em><strong>Saga: Capítulo Cuatro</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>🥸 <em><strong>Hamnet</em></strong> de Maggie O’Farrell</li>
+        <li>🥸 <em><strong>Saga: Capítulo Seis</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>♻️ <em><strong>Saga: Capítulo Cinco</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>♻️ <em><strong>Saga: Capítulo Cuatro</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Tres</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Dos</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Uno</em></strong> de Brian K. Vaughan y Fiona Staples</li>
