--- a/index.html
+++ b/index.html
@@ -324,8 +324,11 @@
       2025:
       <ul>
         <li>🥸 <em><strong>El artesano</em></strong> de Richard Sennett</li>
-        <li>🥸 <em><strong>Hamnet</em></strong> de Maggie O’Farrell</li>
-        <li>🥸 <em><strong>Saga: Capítulo Seis</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>❤️ <em><strong>Hamnet</em></strong> de Maggie O’Farrell</li>
+        <li>♻️ <em><strong>Saga: Capítulo Nueve</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>♻️ <em><strong>Saga: Capítulo Ocho</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>♻️ <em><strong>Saga: Capítulo Siete</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>♻️ <em><strong>Saga: Capítulo Seis</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Cinco</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Cuatro</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Tres</em></strong> de Brian K. Vaughan y Fiona Staples</li>
@@ -823,6 +826,7 @@
     <div class="col2c" id="speaking">
       <p><strong>Speaking</strong></p>
       <ul>
+        <li><strong>Fonts, Tech & Craft.</strong> DiseñaFest, Zaragoza, Spain, 2025.</li>
         <li><strong>Fonts, Tech & Craft.</strong> Galicia Design Week, A Coruña, Spain, 2023.</li>
         <li><strong>Fonts & Branding.</strong> Órbitas, Jaén, Spain, 2023.</li>
         <li><strong>Fonts & Branding.</strong> Semana del Diseño, Granada, Spain, 2023.</li>
