--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
       2025:
       <ul>
         <li>🥸 <em><strong>El artesano</em></strong> de Richard Sennett</li>
+        <li>🥸 <em><strong>Los misterios de la taberna Kamogawa</em></strong> de Hisashi Kashiwai</li>
         <li>❤️ <em><strong>Hamnet</em></strong> de Maggie O’Farrell</li>
         <li>♻️ <em><strong>Saga: Capítulo Nueve</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Ocho</em></strong> de Brian K. Vaughan y Fiona Staples</li>
