--- a/index.html
+++ b/index.html
@@ -323,8 +323,11 @@
       </p>
       2025:
       <ul>
+        <li>🥸 <em><strong>La voz dormida</em></strong> de Dulce Chacón</li>
         <li>🥸 <em><strong>El artesano</em></strong> de Richard Sennett</li>
-        <li>🥸 <em><strong>Los misterios de la taberna Kamogawa</em></strong> de Hisashi Kashiwai</li>
+        <li>✅ <em><strong>Astérix y lo nunca visto</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>✅ <em><strong>Astérix y Latraviata</em></strong> de A. Uderzo</li>
+        <li>✅ <em><strong>Los misterios de la taberna Kamogawa</em></strong> de Hisashi Kashiwai</li>
         <li>❤️ <em><strong>Hamnet</em></strong> de Maggie O’Farrell</li>
         <li>♻️ <em><strong>Saga: Capítulo Nueve</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>♻️ <em><strong>Saga: Capítulo Ocho</em></strong> de Brian K. Vaughan y Fiona Staples</li>
