--- a/index.html
+++ b/index.html
@@ -650,6 +650,10 @@
       <p>Notes: 🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Replayed
       </p>
       </ul>
+      2025:
+      <ul>
+        <li>🎮 <em><strong>Super Mario Bros.</em></strong> on NES (emulated), 1 hour</li>
+      <br>
       2024:
       <ul>
         <li>⏹️ <em><strong>Metal Slug XX</em></strong> on PSP (emulated), 1 hour</li>
