--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
       <ul>
         <li>🥸 <em><strong>La voz dormida</em></strong> de Dulce Chacón</li>
         <li>🥸 <em><strong>El artesano</em></strong> de Richard Sennett</li>
+        <li>🥸 <em><strong>El papiro del César</em></strong> de J. Y. Ferri y D. Conrad</li>
         <li>✅ <em><strong>Astérix y lo nunca visto</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>✅ <em><strong>Astérix y Latraviata</em></strong> de A. Uderzo</li>
         <li>✅ <em><strong>Los misterios de la taberna Kamogawa</em></strong> de Hisashi Kashiwai</li>
@@ -652,7 +653,7 @@
       </ul>
       2025:
       <ul>
-        <li>🎮 <em><strong>Super Mario Bros.</em></strong> on NES (emulated), 1 hour</li>
+        <li>✅ <em><strong>Super Mario Bros.</em></strong> on NES (emulated), 2 hours</li>
       <br>
       2024:
       <ul>
