--- a/index.html
+++ b/index.html
@@ -325,7 +325,9 @@
       <ul>
         <li>🥸 <em><strong>La voz dormida</em></strong> de Dulce Chacón</li>
         <li>🥸 <em><strong>El artesano</em></strong> de Richard Sennett</li>
-        <li>🥸 <em><strong>El papiro del César</em></strong> de J. Y. Ferri y D. Conrad</li>
+        <li>✅ <em><strong>Los milagros de la vida</em></strong> de Stefan Zweig</li>
+        <li>✅ <em><strong>El regalo del César</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>✅ <em><strong>El papiro del César</em></strong> de J. Y. Ferri y D. Conrad</li>
         <li>✅ <em><strong>Astérix y lo nunca visto</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>✅ <em><strong>Astérix y Latraviata</em></strong> de A. Uderzo</li>
         <li>✅ <em><strong>Los misterios de la taberna Kamogawa</em></strong> de Hisashi Kashiwai</li>
@@ -653,6 +655,7 @@
       </ul>
       2025:
       <ul>
+        <li>🎮 <em><strong>Super Mario Bros. 2 (Doki Doki Panic)</em></strong> on NES (emulated), 2 hours</li>
         <li>✅ <em><strong>Super Mario Bros.</em></strong> on NES (emulated), 2 hours</li>
       <br>
       2024:
@@ -787,6 +790,13 @@
           </tr>
         </thead>
         <tbody>
+          <tr>
+            <td>2024/03/23</td>
+            <td>Media Maratón Málaga</td>
+            <td>21K</td>
+            <td>1:50:49</td>
+            <td>5:15</td>
+          </tr>
           <tr>
             <td>2024/03/10</td>
             <td>Media Maratón Málaga</td>
