--- a/index.html
+++ b/index.html
@@ -324,9 +324,10 @@
       2025:
       <ul>
         <li>🥸 <em><strong>Holly</em></strong> de Stephen King</li>
-        <li>🥸 <em><strong>El artesano</em></strong> de Richard Sennett</li>
-        <li>🥸 <em><strong>Saga: Capítulo Once</em></strong> de Brian K. Vaughan y Fiona Staples</li>
-        <li>❤️ <em><strong>Saga: Capítulo Diez</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>♻️ <em><strong>La hoz de oro</em></strong> de R. Goscin
+        <li>❤️ <em><strong>El artesano</em></strong> de Richard Sennett</li>ny y A. Uderzo</li>
+        <li>✅ <em><strong>Saga: Capítulo Once</em></strong> de Brian K. Vaughan y Fiona Staples</li>
+        <li>✅ <em><strong>Saga: Capítulo Diez</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>⏹️ <em><strong>La voz dormida</em></strong> de Dulce Chacón</li>
         <li>⏹️ <em><strong>El aniversario de Astérix y Obélix, El libro de oro</em></strong> de A. Uderzo</li>
         <li>♻️ <em><strong>El regalo del César</em></strong> de R. Goscinny y A. Uderzo</li>
