--- a/index.html
+++ b/index.html
@@ -324,7 +324,8 @@
       2025:
       <ul>
         <li>🥸 <em><strong>Holly</em></strong> de Stephen King</li>
-        <li>♻️ <em><strong>La hoz de oro</em></strong> de R. Goscin
+        <li>♻️ <em><strong>Astérix legionario</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>La hoz de oro</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>❤️ <em><strong>El artesano</em></strong> de Richard Sennett</li>ny y A. Uderzo</li>
         <li>✅ <em><strong>Saga: Capítulo Once</em></strong> de Brian K. Vaughan y Fiona Staples</li>
         <li>✅ <em><strong>Saga: Capítulo Diez</em></strong> de Brian K. Vaughan y Fiona Staples</li>
