--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
       </p>
       2025:
       <ul>
-        <li>🥸 <em><strong>Holly</em></strong> de Stephen King</li>
+        <li>🥸 <em><strong>El cuarto de las estrellas</em></strong> de José Antonio Garriga Vela</li>
+        <li>✅ <em><strong>Holly</em></strong> de Stephen King</li>
         <li>♻️ <em><strong>Astérix legionario</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>♻️ <em><strong>La hoz de oro</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>❤️ <em><strong>El artesano</em></strong> de Richard Sennett</li>ny y A. Uderzo</li>
