--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
       2025:
       <ul>
         <li>🥸 <em><strong>El cuarto de las estrellas</em></strong> de José Antonio Garriga Vela</li>
+        <li>❤️ <em><strong>La casa</em></strong> de Paco Roca</li>
+        <li>✅ <em><strong>El Capitán Trueno y el Círculo de fuego</em></strong> de José Revilla</li>
         <li>✅ <em><strong>Holly</em></strong> de Stephen King</li>
         <li>♻️ <em><strong>Astérix legionario</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>♻️ <em><strong>La hoz de oro</em></strong> de R. Goscinny y A. Uderzo</li>
