--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
       </ul>
       2025:
       <ul>
-        <li>🎮 <em><strong>Super Mario Bros. 2 (Doki Doki Panic)</em></strong> on NES (emulated), 2 hours</li>
+        <li>⏹️ <em><strong>Super Mario Bros. 2 (Doki Doki Panic)</em></strong> on NES (emulated), 1 hour</li>
         <li>✅ <em><strong>Super Mario Bros.</em></strong> on NES (emulated), 2 hours</li>
       <br>
       2024:
