--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       2025:
       <ul>
         <li>🥸 <em><strong>Asesinato en la librería</em></strong> de Sue Minix</li>
-        <li>🥸 <em><strong>Las calles de arena</em></strong> de Paco Roca</li>
+        <li>✅ <em><strong>Las calles de arena</em></strong> de Paco Roca</li>
         <li>🔥 <em><strong>Blacksad: Artic-Nation</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>❤️ <em><strong>Blacksad: Un lugar entre las sombras</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>✅ <em><strong>El cuarto de las estrellas</em></strong> de José Antonio Garriga Vela</li>
