--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
       </p>
       2025:
       <ul>
-        <li>🥸 <em><strong>Asesinato en la librería</em></strong> de Sue Minix</li>
+        <li>✅ <em><strong>Asesinato en la librería</em></strong> de Sue Minix</li>
         <li>✅ <em><strong>Las calles de arena</em></strong> de Paco Roca</li>
         <li>🔥 <em><strong>Blacksad: Artic-Nation</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>❤️ <em><strong>Blacksad: Un lugar entre las sombras</em></strong> de J. Díaz Canales y J. Guarnido</li>
