--- a/index.html
+++ b/index.html
@@ -323,6 +323,8 @@
       </p>
       2025:
       <ul>
+        <li>♻️ <em><strong>El Hobbit</em></strong> de J. R. R. Tolkien</li>
+        <li>✅ <em><strong>La vida con libros</em></strong> de Ricardo Moreno</li>
         <li>✅ <em><strong>Asesinato en la librería</em></strong> de Sue Minix</li>
         <li>✅ <em><strong>Las calles de arena</em></strong> de Paco Roca</li>
         <li>🔥 <em><strong>Blacksad: Artic-Nation</em></strong> de J. Díaz Canales y J. Guarnido</li>
