--- a/index.html
+++ b/index.html
@@ -324,11 +324,13 @@
       2025:
       <ul>
         <li>♻️ <em><strong>El Hobbit</em></strong> de J. R. R. Tolkien</li>
+        <li>✅ <em><strong>¡El cielo se nos cae encima</em></strong> de Albert Uderzo</li>
         <li>✅ <em><strong>La vida con libros</em></strong> de Ricardo Moreno</li>
         <li>✅ <em><strong>Asesinato en la librería</em></strong> de Sue Minix</li>
         <li>✅ <em><strong>Las calles de arena</em></strong> de Paco Roca</li>
-        <li>🔥 <em><strong>Blacksad: Artic-Nation</em></strong> de J. Díaz Canales y J. Guarnido</li>
-        <li>❤️ <em><strong>Blacksad: Un lugar entre las sombras</em></strong> de J. Díaz Canales y J. Guarnido</li>
+        <li>❤️ <em><strong>Blacksad 3: Alma Roja</em></strong> de J. Díaz Canales y J. Guarnido</li>
+        <li>🔥 <em><strong>Blacksad 2: Artic-Nation</em></strong> de J. Díaz Canales y J. Guarnido</li>
+        <li>❤️ <em><strong>Blacksad 1: Un lugar entre las sombras</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>✅ <em><strong>El cuarto de las estrellas</em></strong> de José Antonio Garriga Vela</li>
         <li>♻️ <em><strong>Astérix en Bélgica</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>⏹️ <em><strong>El mundillo literario</em></strong> de Posy Simmonds</li>
@@ -345,7 +347,7 @@
         <li>♻️ <em><strong>El regalo del César</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>✅ <em><strong>El papiro del César</em></strong> de J. Y. Ferri y D. Conrad</li>
         <li>✅ <em><strong>Astérix y lo nunca visto</em></strong> de R. Goscinny y A. Uderzo</li>
-        <li>✅ <em><strong>Astérix y Latraviata</em></strong> de A. Uderzo</li>
+        <li>✅ <em><strong>Astérix y Latraviata</em></strong> de Albert Uderzo</li>
         <li>✅ <em><strong>Los milagros de la vida</em></strong> de Stefan Zweig</li>
         <li>✅ <em><strong>Los misterios de la taberna Kamogawa</em></strong> de Hisashi Kashiwai</li>
         <li>❤️ <em><strong>Hamnet</em></strong> de Maggie O’Farrell</li>
