--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       2025:
       <ul>
         <li>♻️ <em><strong>El Hobbit</em></strong> de J. R. R. Tolkien</li>
-        <li>✅ <em><strong>¡El cielo se nos cae encima</em></strong> de Albert Uderzo</li>
+        <li>✅ <em><strong>¡El cielo se nos cae encima!</em></strong> de Albert Uderzo</li>
         <li>✅ <em><strong>La vida con libros</em></strong> de Ricardo Moreno</li>
         <li>✅ <em><strong>Asesinato en la librería</em></strong> de Sue Minix</li>
         <li>✅ <em><strong>Las calles de arena</em></strong> de Paco Roca</li>
