--- a/index.html
+++ b/index.html
@@ -323,7 +323,9 @@
       </p>
       2025:
       <ul>
+        <li>✅ <em><strong>Amanda Black 1: Una herencia peligrosa</em></strong> de J. Gómez-Jurado y B. Montes</li>
         <li>♻️ <em><strong>El Hobbit</em></strong> de J. R. R. Tolkien</li>
+        <li>♻️ <em><strong>Astérix legionario</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>♻️ <em><strong>Astérix y los Juegos Olímpicos</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>✅ <em><strong>¡El cielo se nos cae encima!</em></strong> de Albert Uderzo</li>
         <li>✅ <em><strong>La vida con libros</em></strong> de Ricardo Moreno</li>
