--- a/index.html
+++ b/index.html
@@ -323,8 +323,11 @@
       </p>
       2025:
       <ul>
+        <li>🥸 <em><strong>El aroma de los bosques</em></strong> de Dominique Roques</li>
+        <li>♻️ <em><strong>La isla del tesoro</em></strong> de R. L. Stevenson</li>
         <li>✅ <em><strong>Amanda Black 1: Una herencia peligrosa</em></strong> de J. Gómez-Jurado y B. Montes</li>
         <li>♻️ <em><strong>El Hobbit</em></strong> de J. R. R. Tolkien</li>
+        <li>✅ <em><strong>El mal trago de Obélix</em></strong> de Albert Uderzo</li>
         <li>♻️ <em><strong>Astérix en Bretaña</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>♻️ <em><strong>Astérix gladiador</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>♻️ <em><strong>Astérix y los Juegos Olímpicos</em></strong> de R. Goscinny y A. Uderzo</li>
