--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
       2025:
       <ul>
         <li>🥸 <em><strong>El aroma de los bosques</em></strong> de Dominique Roques</li>
+        <li>♻️ <em><strong>El corsario negro</em></strong> de Emilio Salgari</li>
         <li>✅ <em><strong>La librera detective</em></strong> de Sue Minix</li>
         <li>♻️ <em><strong>La isla del tesoro</em></strong> de R. L. Stevenson</li>
         <li>✅ <em><strong>Amanda Black 1: Una herencia peligrosa</em></strong> de J. Gómez-Jurado y B. Montes</li>
