--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
       2025:
       <ul>
         <li>🥸 <em><strong>El aroma de los bosques</em></strong> de Dominique Roques</li>
+        <li>🥸 <em><strong>Nacidos de la bruma 1: El imperio final</em></strong> de Brandon Sanderson</li>
         <li>♻️ <em><strong>El corsario negro</em></strong> de Emilio Salgari</li>
         <li>✅ <em><strong>La librera detective</em></strong> de Sue Minix</li>
         <li>♻️ <em><strong>La isla del tesoro</em></strong> de R. L. Stevenson</li>
