--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
       </p>
       2025:
       <ul>
+        <li>🥸 <em><strong>Las minas del rey Salomón</em></strong> de Henry Rider Haggard</li>
         <li>🥸 <em><strong>El aroma de los bosques</em></strong> de Dominique Roques</li>
         <li>🥸 <em><strong>Nacidos de la bruma 1: El imperio final</em></strong> de Brandon Sanderson</li>
         <li>♻️ <em><strong>El corsario negro</em></strong> de Emilio Salgari</li>
